fix: use RecursiveVisitor to tackle all cases