@@ -1,8 +1,10 @@
 package com.hathoute.springdocmigrationplugin.processor;
-import com.hathoute.springdocmigrationplugin.PsiMigrationsHelper;
+import static com.hathoute.springdocmigrationplugin.PsiMigrationsHelper.SF_APIMODELPROPERTY_ANNOTATION;
+import static com.hathoute.springdocmigrationplugin.PsiMigrationsHelper.migrateApiModelProperty;
+
 import com.intellij.psi.PsiField;
 import java.util.Arrays;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 public class PsiFieldProcessor implements PsiElementProcessor<PsiField> {
   private final PsiField field;
@@ -19,9 +21,17 @@ public class PsiFieldProcessor implements PsiElementProcessor<PsiField> {
   @Override
   public void process() {
     final var annotations = Arrays.stream(field.getAnnotations())
-        .filter(a -> PsiMigrationsHelper.SF_APIMODELPROPERTY_ANNOTATION.equals(a.getQualifiedName()))
-        .collect(Collectors.toList());
+        .filter(a -> Objects.nonNull(a.getQualifiedName()))
+        .filter(a -> a.getQualifiedName().startsWith("io.swagger.annotations"))
+        .toList();
 
-    annotations.forEach(a -> PsiMigrationsHelper.migrateApiModelProperty(field, a));
+    annotations.forEach(a -> {
+      switch (a.getQualifiedName()) {
+        case SF_APIMODELPROPERTY_ANNOTATION -> migrateApiModelProperty(field, a);
+        default -> throw new UnsupportedOperationException(
+            "Migration of annotation '%s' is not supported on a field".formatted(
+                a.getQualifiedName()));
+      }
+    });
   }
 }
